--- a/client/public/assets/scss/elements/_profile.scss
+++ b/client/public/assets/scss/elements/_profile.scss
@@ -84,6 +84,98 @@ a {
             transform: translateY(-5px);
         }
     }
+   
+    
+}
+.rn-button-style--6 {
+    width: 540px;
+    height: 40px;
+    color: $theme-color;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    border: 2px solid #b1b4c1;
+    border-radius: 6px;
+    display: inline-block;
+    font-weight: 500;
+    transition: 0.3s;
+    padding: 10px 20px;
+    background-color: #ffffff; /* White background for the Google button */
+    display: flex; /* To align items properly */
+    align-items: center;
+    justify-content: center;
+
+    @media #{$sm-layout} {
+        padding: 9px 25px;
+    }
+
+    &.rn-btn-dark {
+        border: 2px solid #1f1f25;
+        color: #1f1f25;
+
+        &:hover {
+            background: #1f1f25;
+            color: #fff;
+        }
+    }
+
+    &.border-opacity-half {
+        border-color: rgba(31, 31, 37, 0.1);
+    }
+
+    &.rn-btn-small {
+        padding: 10px 20px;
+    }
+
+    &.btn-primary-color {
+        &:hover {
+            border: 2px solid white;
+            background: white;
+            color:  $theme-color;
+        }
+    }
+
+    &.btn-solid {
+        border: 2px solid $theme-color;
+        background: white;
+        color: #ffffff;
+    }
+
+    &.btn-solid-border {
+        border: 2px solid $theme-color;
+        background: transparent;
+        color: $theme-color;
+
+        &:hover {
+            border: 2px solid $theme-color;
+            background: white;
+            color: #ffffff;
+            transform: translateY(-5px);
+        }
+    }
+
+    &.rn-btn-small-2 {
+        padding: 11px 15px;
+        font-size: 13px;
+        letter-spacing: 0;
+        line-height: 13px;
+    }
+
+    &.btn-solid {
+        background: white;
+        color: $theme-color;
+    }
+
+    &:hover {
+        background: transparent;
+        color: $theme-color;
+        box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.1);
+        transform: translateY(-5px);
+    }
+
+    .google-icon {
+        margin-right: 10px; /* Space between the Google logo and the text */
+    }
 }
 
 .S9gUrf-YoZ4jf {
@@ -97,7 +189,7 @@ a {
     padding: 50px 0;
 }
 
-.container {
+.profile-container {
     padding: 0 15px;
 }
 
@@ -121,6 +213,8 @@ a {
     padding: 30px;
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
+    margin-left: 40px ;
+    margin-right: 40px ;
 }
 
 .form-wrapper form {
@@ -175,9 +269,20 @@ a {
     font-size: small;
     margin-left: auto;
 }
-
+.google-button{
+    margin-top: 10px;
+    width: 100%;
+}
+button.rn-button-style--3.btn-solid, a.rn-button-style--3.btn-solid{
+    width: 100%;
+}
 @media (max-width: 768px) {
     .form-wrapper form {
+        margin-left: 0px !important;
+        margin-right: 0px !important;
+    }
+
+    .form-wrapper{
         margin-left: 0px !important;
         margin-right: 0px !important;
     }
@@ -234,5 +339,11 @@ a {
         margin-bottom: 10px;
         /* Adds space between stacked buttons */
     }
+
+    .rn-button-style--6.btn-solid {
+        width: auto;
+    }
+
+
 
 }
