--- a/client/src/elements/extension/extension.css
+++ b/client/src/elements/extension/extension.css
@@ -5,22 +5,26 @@
     margin: 0 auto;
     padding: 20px 40px;
 }
+
 .extension-container {
     padding: 0px 15px;
 }
+
 .extension-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
     background-color: #f0f0f0;
-    border-radius: 10px; /* Add border radius */
+    border-radius: 10px;
+    /* Add border radius */
 }
 
 .extension-logo {
     width: 50px;
     height: 50px;
-    border-radius: 10px; /* Add border radius */
+    border-radius: 10px;
+    /* Add border radius */
 }
 
 .extension-header-content {
@@ -44,24 +48,28 @@
 .extension-main-content {
     display: flex;
     padding: 20px;
-    flex-wrap: wrap; /* Enable wrapping for smaller screens */
+    flex-wrap: wrap;
+    /* Enable wrapping for smaller screens */
 }
 
 .extension-image-gallery {
     flex: 1;
     margin-right: 20px;
-    margin-bottom: 20px; /* Add margin bottom for spacing in mobile view */
+    margin-bottom: 20px;
+    /* Add margin bottom for spacing in mobile view */
 }
 
 .extension-main-image {
     width: 100%;
     height: 420px;
-    border-radius: 10px; /* Add border radius */
+    border-radius: 10px;
+    /* Add border radius */
 }
 
 .extension-thumbnails {
     display: flex;
-    justify-content: center; /* Center align the thumbnails */
+    justify-content: center;
+    /* Center align the thumbnails */
     margin-top: 10px;
 }
 
@@ -70,19 +78,23 @@
     height: 50px;
     margin-right: 10px;
     cursor: pointer;
-    border-radius: 5px; /* Add border radius */
+    border-radius: 5px;
+    /* Add border radius */
 }
 
 .extension-thumbnails img:last-child {
-    margin-right: 0; /* Remove the margin on the last thumbnail */
+    margin-right: 0;
+    /* Remove the margin on the last thumbnail */
 }
+
 .extension-thumbnails img.extension-active {
-    border: 2px solid #000;
+    border: 2px solid #f9004d;
 }
 
 .extension-details {
-    flex: 1;
-    min-width: 300px; /* Ensure minimum width for better display on mobile */
+    flex: 0.6;
+    min-width: 300px;
+    /* Ensure minimum width for better display on mobile */
 }
 
 .extension-select-box {
@@ -107,14 +119,17 @@
     border-radius: 5px;
     margin-bottom: 10px;
 }
+
 .extension-info-box p {
     font-size: small;
 }
+
 .extension-price-box {
     margin-bottom: 20px;
 }
 
-.extension-price-box .extension-price, .extension-price-box .extension-total {
+.extension-price-box .extension-price,
+.extension-price-box .extension-total {
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
@@ -125,7 +140,7 @@
     padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color:  #f9004d;
+    background-color: #f9004d;
     color: #fff;
     cursor: pointer;
     margin-bottom: 10px;
@@ -140,17 +155,20 @@
 .extension-bottom-section {
     display: flex;
     padding: 0px;
-    flex-wrap: wrap; /* Enable wrapping for smaller screens */
+    flex-wrap: wrap;
+    /* Enable wrapping for smaller screens */
 }
 
-.extension-main-content, .extension-bottom-section {
+.extension-main-content,
+.extension-bottom-section {
     padding-left: 0px;
     padding-right: 0px;
 }
 
 .extension-sidebar {
     width: 100%;
-    margin-bottom: 20px; /* Add margin bottom for spacing in mobile view */
+    margin-bottom: 20px;
+    /* Add margin bottom for spacing in mobile view */
 }
 
 .extension-sidebar ul {
@@ -174,16 +192,22 @@
 .extension-content {
     flex: 1;
 }
+
 .extension-content h2 {
-    font-size: 24px; /* Optimize heading size */
-    margin-top: 0; /* Remove the default margin */
+    font-size: 24px;
+    /* Optimize heading size */
+    margin-top: 0;
+    /* Remove the default margin */
     padding-bottom: 10px;
-    border-bottom: 2px solid #ccc; /* Add a line below the heading */
+    border-bottom: 2px solid #ccc;
+    /* Add a line below the heading */
 }
 
 .extension-content p {
-    font-size: 16px; /* Optimize paragraph text size */
-    line-height: 1.5; /* Add line height for better readability */
+    font-size: 16px;
+    /* Optimize paragraph text size */
+    line-height: 1.5;
+    /* Add line height for better readability */
     margin-top: 10px;
     padding-bottom: 10px;
     /* border-bottom: 1px solid #ccc; */
@@ -195,9 +219,11 @@
         flex-direction: column;
         align-items: flex-start;
     }
+
     .extension-header-content {
         padding: 10px 0px;
     }
+
     .extension-rating {
         margin-top: 10px;
     }
@@ -225,23 +251,34 @@
     .extension-content {
         margin-top: 20px;
     }
+
+    .nav-button {
+        display: none;
+    }
 }
 
 .extension-bottom-section {
     display: flex;
     padding: 20px 0px;
-    flex-wrap: nowrap; /* Ensure no wrap for larger screens */
-    align-items: flex-start; /* Align items to the top */
+    flex-wrap: nowrap;
+    /* Ensure no wrap for larger screens */
+    align-items: flex-start;
+    /* Align items to the top */
 }
 
 .extension-sidebar {
-    position: -webkit-sticky; /* For Safari */
+    position: -webkit-sticky;
+    /* For Safari */
     position: sticky;
-    top: 20px; /* Distance from the top of the viewport */
-    width: 200px; /* Ensure it maintains the width */
+    top: 20px;
+    /* Distance from the top of the viewport */
+    width: 200px;
+    /* Ensure it maintains the width */
     margin-right: 20px;
-    border-right: 1px solid #ccc; /* Add a line separator */
-    padding-right: 20px; /* Add padding to the right for spacing */
+    border-right: 1px solid #ccc;
+    /* Add a line separator */
+    padding-right: 20px;
+    /* Add padding to the right for spacing */
 }
 
 .extension-sidebar ul {
@@ -264,17 +301,22 @@
 
 .extension-content {
     flex: 1;
-    padding-left: 20px; /* Add padding to the left for spacing */
+    padding-left: 20px;
+    /* Add padding to the left for spacing */
 }
 
 .extension-content h2 {
-    font-size: 24px; /* Optimize heading size */
-    margin-top: 0; /* Remove the default margin */
+    font-size: 24px;
+    /* Optimize heading size */
+    margin-top: 0;
+    /* Remove the default margin */
 }
 
 .extension-content p {
-    font-size: 16px; /* Optimize paragraph text size */
-    line-height: 1.5; /* Add line height for better readability */
+    font-size: 16px;
+    /* Optimize paragraph text size */
+    line-height: 1.5;
+    /* Add line height for better readability */
 }
 
 @media (max-width: 768px) {
@@ -284,14 +326,55 @@
 
     .extension-sidebar {
         width: 100%;
-        border-right: none; /* Remove the line separator */
+        border-right: none;
+        /* Remove the line separator */
         padding-right: 0;
-        border-bottom: 1px solid #ccc; /* Add bottom border for mobile view */
+        border-bottom: 1px solid #ccc;
+        /* Add bottom border for mobile view */
         padding-bottom: 20px;
     }
 
     .extension-content {
-        padding-left: 0; /* Remove left padding for mobile view */
-        margin-top: 20px; /* Add top margin for spacing */
+        padding-left: 0;
+        /* Remove left padding for mobile view */
+        margin-top: 20px;
+        /* Add top margin for spacing */
     }
+
+}
+
+/* Add styles for navigation buttons */
+.image-navigation {
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    position: relative;
+}
+
+.nav-button {
+    background-color: transparent;
+    border: none;
+    margin-top: 20px;
+    cursor: pointer;
+    width: 60px;
+    height: 60px;
+    font-size: 40px !important;
+    color: #a2a2a2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    transform: translateY(-50%);
+}
+
+.nav-button:hover {
+    color: #f9004d;
+}
+
+.nav-button.prev-button {
+    left: -20px;
+}
+
+.nav-button.next-button {
+    right: -20px;
 }
