--- a/client/public/assets/scss/default/_variables.scss
+++ b/client/public/assets/scss/default/_variables.scss
@@ -73,14 +73,14 @@ $large-mobile: 'only screen and (max-width: 575px)';
 $small-mobile: 'only screen and (max-width: 479px)';
 /* container 300px*/
 
-@media #{$large-mobile} {
-    .container {
-        width: 450px;
-    }
-}
+// @media #{$large-mobile} {
+//     .container {
+//         width: 450px;
+//     }
+// }
 
-@media #{$small-mobile} {
-    .container {
-        width: 320px;
-    }
-}
+// @media #{$small-mobile} {
+//     .container {
+//         width: 320px;
+//     }
+// }
