added admin side files

--- a/client/public/assets/scss/template/_dark-version.scss
+++ b/client/public/assets/scss/template/_dark-version.scss
@@ -38,6 +38,9 @@
     .brand-separation {
         background: #000000;
     }
+    .client-description{
+        color: #c6c9d8;
+    }
 
     .bg_color--5,
     .footer-right {
