--- a/client/public/assets/scss/blog/_blog.scss
+++ b/client/public/assets/scss/blog/_blog.scss
@@ -160,7 +160,7 @@ Blog Styles
 }
 
 .page-link {
-    color: #007bff;
+    color: #000000;
     text-decoration: none;
     padding: 8px 12px;
     border: 1px solid #ddd;
