--- a/client/src/elements/profile/UserProfile.css
+++ b/client/src/elements/profile/UserProfile.css
@@ -4,6 +4,8 @@
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     position: relative;
+    margin-left: 10px;
+    margin-right: 10px;
     /* Add this to position the button */
 }
 
