--- a/client/src/elements/profile/UserProfile.css
+++ b/client/src/elements/profile/UserProfile.css
@@ -16,6 +16,7 @@
     border-bottom: 1px solid #eaeaea;
     padding-bottom: 20px;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 @media (min-width: 768px) {
