--- a/client/public/assets/scss/style.scss
+++ b/client/public/assets/scss/style.scss
@@ -140,5 +140,6 @@
 @import 'template/about';
 @import 'template/portfolio-details';
 @import 'template/service-details';
+@import 'template/gallery-details';
 @import 'template/dark-version';
 @import 'template/preview';
